solc_mutator_ossfuzz_seed_corpus/test_sol/test_8080df27e8ff3a30df2ce81518211f7efe333b59f7e1b16883def28ff93ac709_a726f62e21d4fc43215c1c94795a62a137dd1093_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  bytes11 el0;
}
library L0 {
  function f0() public   
  {
  }
  using L0 for *;
  using L0 for *;
}
using L0 for uint;
library L1 {
  event ev0(bool  ep0, bool  ep1, function () internal   returns (int248, int56)  ep2);
  event ev1(string  ep0, St0  ep1);
  event ev2(address payable indexed ep0, int112 indexed ep1);
  function f1(St0 memory i0) public    returns(bool o0)
  {
    return (true);
  }
  error er0(function (bytes29) external   ep0);
}
pragma solidity >= 0.0.0;
using L1 for uint;
using L1 for uint;
using L0 for uint;
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:181-232): Internal or recursive type is not allowed as event parameter type.
